--- a/.github/workflows/docker_pipeline.yaml
+++ b/.github/workflows/docker_pipeline.yaml
@@ -1,17 +1,17 @@
-name: Docker Build and Push
+name: Simple Build
 
 on:
   push:
     branches:
-      - main  # or master, your default branch
+      - master   # your default branch
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-
-        
+      - name: List repo files
+        run: ls -la
